--- a/ethdapp/src/index.html
+++ b/ethdapp/src/index.html
@@ -11,6 +11,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root class="bg-light"></app-root>
+  <app-root></app-root>
 </body>
 </html>
